Featured text alignment fix

--- a/source/css/gallery.css.scss
+++ b/source/css/gallery.css.scss
@@ -1360,8 +1360,10 @@ li .current + ol > li
     background: none repeat scroll 0 0 #4d4d4d;
     color: #cccccc;
     opacity: 0.8;
-    padding: 2px 2px 2px 5px;
+    padding: 2px;
+	padding-right: 5px;
     position: absolute;
     top: 162px;
     width: 286px;
+	text-align: right;
 }
